@@ -33,6 +33,7 @@
 <!ENTITY page.elements.topics.caption "Topic Lists">
 <!ENTITY page.elements.topics.quickpost "QuickPost Topic form">
 <!ENTITY page.elements.topics.trackedlink "Link to boards on Tracked Topics page">
+<!ENTITY page.elements.topics.lastpostlink "Link to last post">
 <!ENTITY page.elements.messages.caption "Message Lists">
 <!ENTITY page.elements.messages.quickpost "QuickPost Message form">
 <!ENTITY page.elements.messages.taglink "&quot;Tag Topic&quot; link">
