@@ -9,6 +9,7 @@
       group
     * Remove pre-signature field
     * Enforce the 160-character limit in signatures
+    * Link to the last post of a topic in its "last post" column
 
 2008-08-23:
     * version 0.6.5
